# ur-dashboard

./: .gitignore  README.md  pyproject.toml  sample_async.py  sample_sync.py  sample_web.py
.github/workflows/: docs.yml
docs/: Makefile  build_multilang.py  make.bat
docs/source/: conf.py  index.rst  quickstart.rst  sequence.rst
docs/source/_templates/: layout.html
docs/source/en/: index.rst  quickstart.rst  sequence.rst
docs/source/ko/: api.rst  index.rst  quickstart.rst  sequence.rst
ur_dashboard/: __init__.py  async_dashboard.py  client.py  exceptions.py  server.py  sync_dashboard.py
