[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ur-dashboard"
version = "1.0.0"
description = "Universal Robots Dashboard Server client"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
api = ["fastapi", "uvicorn[standard]"]
docs = ["sphinx", "sphinx-rtd-theme", "sphinx-autodoc-typehints"]

[tool.setuptools.packages.find]
include = ["ur_dashboard*"]
